tests/ui/methods/supertrait-shadowing/definition-site.stderr
error: trait item `method` from `Super` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:8:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
   |
note: item from `SuperSuper` is shadowed by a subtrait item
  --> $DIR/definition-site.rs:4:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/definition-site.rs:1:9
   |
LL | #![deny(supertrait_item_shadowing_definition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait item `method` from `Sub` shadows identically named item from supertrait
  --> $DIR/definition-site.rs:13:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
   |
note: items from several supertraits are shadowed: `Super` and `SuperSuper`
  --> $DIR/definition-site.rs:4:5
   |
LL |     fn method();
   |     ^^^^^^^^^^^^
...
LL |     fn method();
   |     ^^^^^^^^^^^^

error: aborting due to 2 previous errors

